# Eco-driving-resilience

./: .gitignore  README.md  actual_trajectory.csv  predicted_trajectory.csv
install/: local_setup.sh  setup.sh
install/vehicle_controller/include/vehicle_controller/: signal_io.hpp  vehicle_controller.hpp
install/vehicle_controller/share/vehicle_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vehicle_controller/share/vehicle_controller/cmake/: vehicle_controllerConfig.cmake
install/vehicle_controller/share/vehicle_controller/launch/: vehicle_stack.launch.py
install/vehicle_sender/lib/vehicle_sender/: vehicle_sender_node
install/vehicle_sender/share/vehicle_sender/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vehicle_sender/share/vehicle_sender/cmake/: vehicle_senderConfig.cmake
log/: latest_build
novatel_oem7_msgs/: CMakeLists.txt
novatel_oem7_msgs/msg/: ._Oem7Header.msg  BYINS2.msg  CORRIMUDATA.msg  GNSSSolutionStatus.msg  INSPVAX.msg  INSPVAXExtendedParams.msg  PositionOrVelocityType.msg
signal_monitor/: CMakeLists.txt  package.xml
signal_monitor/launch/: signal_monitor.launch.py
signal_monitor/src/: signal_monitor_node.cpp
vehicle_controller/: CMakeLists.txt  package.xml
vehicle_controller/include/vehicle_controller/: signal_io.hpp  vehicle_controller.hpp
vehicle_controller/launch/: vehicle_stack.launch.py
vehicle_controller/src/: signal_io.cpp  vehicle_controller.cpp  vehicle_node.cpp
vehicle_optimal/: CMakeLists.txt  package.xml
vehicle_optimal/include/vehicle_optimal/: signal_io.hpp  vehicle_optimal.hpp
vehicle_optimal/launch/: vehicle_optimal_stack.launch.py
vehicle_optimal/src/: signal_io.cpp  vehicle_node.cpp  vehicle_optimal.cpp
vehicle_sender/: CMakeLists.txt
vehicle_sender/src/: vehicle_sender_node.cpp
