<?xml version="1.0"?>
<package format="3">
  <name>vehicle_optimal</name>
  <version>0.0.1</version>
  <description>Eco-driving controller using OSQP and ROS 2</description>

  <maintainer email="cats@todo.todo">cats</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies used in CMakeLists.txt -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>Eigen3</depend>

  <!-- Optional: if OsqpEigen had a ROS package (currently doesn't) -->
  <!-- You are manually installing and linking it via CMake -->

  <!-- Test tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
